wellesleynet/roles/k8s/files/ombi.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  serviceName: "ombi"
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - image: linuxserver/ombi:v4.22.5-ls147
        imagePullPolicy: Always
        name: ombi
        ports:
        - containerPort: 3579
        volumeMounts:
        - name: ombi
          mountPath: /config
        livenessProbe:
          exec:
            command:
            - ls
            - /config/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: ombi
        persistentVolumeClaim:
          claimName: ombi
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: ombi
spec:
  selector:
    app: ombi
  ports:
  - name: ombi
    port: 3579
    protocol: TCP
    targetPort: 3579
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ombi.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ombi
            port:
              number: 3579
  tls:
  - hosts:
    - ombi.kiski.co
    secretName: ombi-kiski-co-tls
